--- a/S-Calc/S_Calc/MainPage.xaml
+++ b/S-Calc/S_Calc/MainPage.xaml
@@ -2,7 +2,76 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:S_Calc"
+             xmlns:System="clr-namespace:System;assembly=mscorlib"
              x:Class="S_Calc.MainPage">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="DataInKeyboardStyle" TargetType="Button">
+                <Setter Property="FontSize" Value="30" />
+                <Setter Property="BorderWidth" Value="1" />
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
-    
+    <StackLayout x:Name="ParentLayout" Orientation="Vertical">
+        <StackLayout x:Name="IOStackLayout">
+            <StackLayout.Padding>
+                <Thickness Top="10" />
+            </StackLayout.Padding>
+            <Entry x:Name="Input" FontFamily="Times New Roman" FontSize="30" TextChanged="Input_TextChanged" />
+            <Label x:Name="Output" FontFamily="Times New Roman" FontSize="30" Text=" = " TextColor="Black"/>
+        </StackLayout>
+
+
+        <Grid Padding="10,10,10,10" x:Name="keyboard" RowSpacing="0" ColumnSpacing="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <Button Text = "copy" Grid.Column="0" Grid.Row="0" FontSize="10" BorderWidth="1" Clicked="KeyCopyClicked" />
+            <Button Text = "paste" Grid.Column="1" Grid.Row="0" FontSize="10" BorderWidth="1" Clicked="KeyPasteClicked" />
+            <Button x:Name="undoButton" Text = "undo" Grid.Column="2" Grid.Row="0" FontSize="10" BorderWidth="1" Clicked="KeyUndoClicked" />
+            <Button Text = "delete" Grid.Column="3" Grid.Row="0" FontSize="10" BorderWidth="1" Clicked="KeyDeleteClicked" />
+            <Button Text = "backspace" Grid.Column="4" Grid.Row="0" FontSize="6" BorderWidth="1" Clicked="KeyBackspaceClicked" />
+
+            <Button Text = "1" Grid.Column="0" Grid.Row="1" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked"/>
+            <Button Text = "2" Grid.Column="1" Grid.Row="1" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "3" Grid.Column="2" Grid.Row="1" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "+" Grid.Column="3" Grid.Row="1" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "-" Grid.Column="4" Grid.Row="1" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+
+            <Button Text = "4" Grid.Column="0" Grid.Row="2" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "5" Grid.Column="1" Grid.Row="2" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "6" Grid.Column="2" Grid.Row="2" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "×" Grid.Column="3" Grid.Row="2" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "/" Grid.Column="4" Grid.Row="2" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+
+            <Button Text = "7" Grid.Column="0" Grid.Row="3" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "8" Grid.Column="1" Grid.Row="3" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "9" Grid.Column="2" Grid.Row="3" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "(" Grid.Column="3" Grid.Row="3" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = ")" Grid.Column="4" Grid.Row="3" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+
+            <Button Text = "." Grid.Column="0" Grid.Row="4" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "0" Grid.Column="1" Grid.Row="4" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "," Grid.Column="2" Grid.Row="4" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "^" Grid.Column="3" Grid.Row="4" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "√" Grid.Column="4" Grid.Row="4" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+
+        </Grid>
+
+
+    </StackLayout>
+
 </ContentPage>
