--- a/S-Calc/S_Calc/MainPage.xaml
+++ b/S-Calc/S_Calc/MainPage.xaml
@@ -4,22 +4,27 @@
              xmlns:local="clr-namespace:S_Calc"
              xmlns:System="clr-namespace:System;assembly=mscorlib"
              x:Class="S_Calc.MainPage">
-    <ContentPage.Resources>
+    
+    <!--<ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="DataInKeyboardStyle" TargetType="Button">
                 <Setter Property="FontSize" Value="30" />
                 <Setter Property="BorderWidth" Value="1" />
             </Style>
+            <Style x:Key="IOTextStyle" TargetType="Button">
+                <Setter Property="FontSize" Value="30" />
+                <Setter Property="FontFamily" Value="Times New Roman" />
+            </Style>
         </ResourceDictionary>
-    </ContentPage.Resources>
+    </ContentPage.Resources>-->
 
     <StackLayout x:Name="ParentLayout" Orientation="Vertical">
         <StackLayout x:Name="IOStackLayout">
             <StackLayout.Padding>
                 <Thickness Top="10" />
             </StackLayout.Padding>
-            <Entry x:Name="Input" FontFamily="Times New Roman" FontSize="30" TextChanged="Input_TextChanged" />
-            <Label x:Name="Output" FontFamily="Times New Roman" FontSize="30" Text=" = " TextColor="Black"/>
+            <Entry x:Name="Input" FontSize="30" FontFamily="Times New Roman" TextChanged="Input_TextChanged" />
+            <Label x:Name="Output" FontSize="30" FontFamily="Times New Roman" Text=" = " TextColor="Black"/>
         </StackLayout>
 
 
@@ -45,29 +50,29 @@
             <Button Text = "delete" Grid.Column="3" Grid.Row="0" FontSize="10" BorderWidth="1" Clicked="KeyDeleteClicked" />
             <Button Text = "backspace" Grid.Column="4" Grid.Row="0" FontSize="6" BorderWidth="1" Clicked="KeyBackspaceClicked" />
 
-            <Button Text = "1" Grid.Column="0" Grid.Row="1" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked"/>
-            <Button Text = "2" Grid.Column="1" Grid.Row="1" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "3" Grid.Column="2" Grid.Row="1" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "+" Grid.Column="3" Grid.Row="1" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "-" Grid.Column="4" Grid.Row="1" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "1" Grid.Column="0" Grid.Row="1" FontSize="30" BorderWidth="1" Clicked="KeyClicked"/>
+            <Button Text = "2" Grid.Column="1" Grid.Row="1" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "3" Grid.Column="2" Grid.Row="1" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "+" Grid.Column="3" Grid.Row="1" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "-" Grid.Column="4" Grid.Row="1" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
 
-            <Button Text = "4" Grid.Column="0" Grid.Row="2" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "5" Grid.Column="1" Grid.Row="2" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "6" Grid.Column="2" Grid.Row="2" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "×" Grid.Column="3" Grid.Row="2" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "/" Grid.Column="4" Grid.Row="2" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "4" Grid.Column="0" Grid.Row="2" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "5" Grid.Column="1" Grid.Row="2" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "6" Grid.Column="2" Grid.Row="2" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "×" Grid.Column="3" Grid.Row="2" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "/" Grid.Column="4" Grid.Row="2" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
 
-            <Button Text = "7" Grid.Column="0" Grid.Row="3" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "8" Grid.Column="1" Grid.Row="3" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "9" Grid.Column="2" Grid.Row="3" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "(" Grid.Column="3" Grid.Row="3" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = ")" Grid.Column="4" Grid.Row="3" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "7" Grid.Column="0" Grid.Row="3" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "8" Grid.Column="1" Grid.Row="3" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "9" Grid.Column="2" Grid.Row="3" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "(" Grid.Column="3" Grid.Row="3" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = ")" Grid.Column="4" Grid.Row="3" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
 
-            <Button Text = "." Grid.Column="0" Grid.Row="4" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "0" Grid.Column="1" Grid.Row="4" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "," Grid.Column="2" Grid.Row="4" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "^" Grid.Column="3" Grid.Row="4" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
-            <Button Text = "√" Grid.Column="4" Grid.Row="4" Style="{StaticResource DataInKeyboardStyle}" Clicked="KeyClicked" />
+            <Button Text = "." Grid.Column="0" Grid.Row="4" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "0" Grid.Column="1" Grid.Row="4" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "," Grid.Column="2" Grid.Row="4" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "^" Grid.Column="3" Grid.Row="4" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
+            <Button Text = "√" Grid.Column="4" Grid.Row="4" FontSize="30" BorderWidth="1" Clicked="KeyClicked" />
 
         </Grid>
 
